Original manualTestSuite IllegalFieldValueExceptionTest.java